tinyc/test/bad/enum-redeclaration-global.c
enum {
    x = 10,
};

enum {
    x = 10,
};

int main()
{
    return 0;
}
